# winxplr

./: Cargo.toml
src/: error.rs  fs.rs  main.rs  ops.rs  ui.rs
src/ui/: breadcrumbs.rs  constants.rs  context_menu.rs  context_menu_render.rs  filelist.rs  menubar.rs  mod.rs  modals.rs  preview.rs  sidebar.rs  types.rs  utils.rs  widgets.rs  zip.rs
