[package]
name = "winxplr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
color-eyre = "0.6.5"
gpui = "0.2.2"
mimalloc = "0.1.48"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"
zip = "8.2.0"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
